# qa_quru_python_3_20_browserstack

./: .gitignore  config.py  env.example  pyproject.toml  requirements.txt
tests/: conftest.py  find_article.py  test_browserstack.py
utils2/: attach_video.py
